[workspace]
resolver = "2"
members = [
    "sombra",
    "sombra-api",
    "sombra-client",
    "sombra-types",
    "sombra-lookup",
]

[workspace.dependencies]
poem-openapi = { version = "3.0", features = ["swagger-ui", "chrono", "url"] }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
debug = false
strip = true

[profile.release]
lto = true
opt-level = 3
debug = true
incremental = false
codegen-units = 1
