[workspace]
resolver = "2"
members = [
    "sombra",
    "sombra-api",
    "sombra-client",
    "sombra-types",
    "sombra-lookup",
]

[workspace.dependencies]
poem-openapi = { version = "3.0", features = ["swagger-ui", "chrono", "url"] }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"

# wasm release profile used in build.rs
# HACK: trunk doesn't support custom profiles and deadlocks when the same profile is used
[profile.dev]
opt-level = 'z'
lto = true
debug = false
strip = true
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1

# actual dev profile
[profile.dbg]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.release]
lto = true
opt-level = 3
debug = true
incremental = false
codegen-units = 1
