[package]
name = "sombra-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sombra = { path = "../sombra", features = ["poem_openapi"] }
poem = { version = "1.3", features = ["compression", "static-files"] }
poem-openapi.workspace = true
shuttle-poem = "0.31"
shuttle-runtime = "0.31"
tokio = "1.28"
thiserror.workspace = true
serde.workspace = true
serde_derive.workspace = true
tracing = "0.1"
