[package]
name = "sombra-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl = "0.7"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
