[package]
name = "sombra-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sombra-client = { path = "../sombra-client" }
leptos = { version = "0.5", features = ["csr"] }
leptos-use = { version = "0.8", features = ["storage"] }
regex = "1.10"
serde.workspace = true
serde_derive.workspace = true

[profile.release]
opt-level = 'z'
strip = true
