[package]
name = "sombra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = { version = "0.5", features = ["macro", "serde1"] }
tl = "0.7"
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
