[package]
name = "sombra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = { version = "0.5", features = ["macro", "serde1"] }
tl = "0.7"
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.25", features = ["full"] }
futures.workspace = true
chrono.workspace = true
url.workspace = true
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
